--- a/platformio.ini
+++ b/platformio.ini
@@ -8,5 +8,6 @@ monitor_speed = 115200
 lib_deps =
   knolleary/PubSubClient@^2.8
   bblanchon/ArduinoJson@^6.21.5
+  claws/BH1750@^1.3.0
 ; Filesystem para futuros uploads (opcional, mas já deixa pronto)
 board_build.filesystem = littlefs
